--- a/CustomAuthenticationApp/_Imports.razor
+++ b/CustomAuthenticationApp/_Imports.razor
@@ -15,3 +15,4 @@
 @using CustomAuthenticationApp.Abstractions;
 @using CustomAuthenticationApp.Models;
 @using CustomAuthenticationApp.Services;
+@attribute [Authorize]
