--- a/CustomAuthenticationApp/Pages/FetchData.razor
+++ b/CustomAuthenticationApp/Pages/FetchData.razor
@@ -37,21 +37,56 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private List<WeatherForecast>? forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        //forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = new List<WeatherForecast>();
+        await foreach (var forecast in GetForecastAsync(DateTime.Now))
+        {
+            forecasts.Add(forecast);
+            this.StateHasChanged();
+        }
     }
 
     public class WeatherForecast
     {
-        public DateOnly Date { get; set; }
+        public DateTime Date { get; set; }
 
         public int TemperatureC { get; set; }
 
         public string? Summary { get; set; }
 
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    }
+
+    private static string[] Summaries = new[]
+    {
+            "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching"
+    };
+
+    public async IAsyncEnumerable<WeatherForecast> GetForecastAsync(DateTime startDate)
+    {
+        var rng = new Random();
+
+        for (int i = 0; i < 5; i++)
+        {
+            yield return await CreateWeatherForecastAsync(startDate, i, rng);
+        }
+    }
+
+    private static async Task<WeatherForecast> CreateWeatherForecastAsync(
+        DateTime startDate,
+        int index,
+        Random rng)
+    {
+        await Task.Delay(1000);
+        return new WeatherForecast
+            {
+                Date = startDate.AddDays(index),
+                TemperatureC = rng.Next(-20, 55),
+                Summary = Summaries[rng.Next(Summaries.Length)]
+            };
     }
 }
