--- a/CustomAuthenticationApp/Shared/NavbarDisplay.razor
+++ b/CustomAuthenticationApp/Shared/NavbarDisplay.razor
@@ -1,7 +1,7 @@
 ﻿@using System.Security.Claims;
 @inject NavigationManager navigationManager
 @inject IAuthenticationService authenticationService
-@inject ILogger<LoginDisplay> logger
+@inject ILogger<NavbarDisplay> logger
 
 <AuthorizeView>
     <Authorized>
